--- a/teki-story/Base.lproj/Main.storyboard
+++ b/teki-story/Base.lproj/Main.storyboard
@@ -25,13 +25,16 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4sc-At-Z2c">
-                                <rect key="frame" x="49" y="532" width="277" height="103"/>
+                                <rect key="frame" x="69" y="540" width="277" height="103"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" name="ButtonColor"/>
                                 <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="45"/>
                                 <state key="normal" title="ET MOI ?">
                                     <color key="titleColor" name="ButtonTextColor"/>
                                 </state>
+                                <connections>
+                                    <action selector="changeQuote" destination="BYZ-38-t0r" eventType="touchUpInside" id="9Vh-6y-rXQ"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
